# twat-video

./: .gitignore  .pre-commit-config.yaml  CLEANUP.txt  LOG.md  README.md  REPO_CONTENT.txt  VERSION.txt  cleanup.py  pyproject.toml
.cursor/rules/: 0project.mdc  cleanup.mdc  filetree.mdc  quality.mdc
.github/workflows/: push.yml  release.yml
src/: twat_video.py  videoextendprompt.py
src/twat_video/: __init__.py  twat_video.py
tests/: test_package.py  test_twat_video.py
